--- a/css/estilos.css
+++ b/css/estilos.css
@@ -76,6 +76,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 
 }
 
@@ -115,6 +116,8 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+ 
 }
 .project-course,
 .project-date,
@@ -139,11 +142,16 @@ h2 {
 
 
 .project-details {
-  width: 500px;
+  width: 50%;
 }
 
 .project-imageContainer {
-  width: 500px;
+  width: 50%;
+}
+
+.project-imageContainer img {
+  max-width: 100%;
+  width: 100%;
 }
 
 .header {
@@ -153,6 +161,7 @@ h2 {
   height: 70px;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 ol,
@@ -164,6 +173,7 @@ ul {
 
 figure {
   margin: 0;
+  text-align: center;
 }
 
 .header a {
@@ -266,6 +276,7 @@ figure {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .social {
@@ -321,11 +332,146 @@ figure {
 
 .container {
   /* border: 1px solid red; */
-  width: 1000px;
+  max-width: 1000px; 
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
   align-items: inherit;
   height: inherit;
   flex-wrap: inherit;
+  flex: 1; 
 }
+/* //Desktop Fisrt */
+@media screen and (max-width:1024px)
+{
+  body{
+    /* border: solid 10px green; */
+  }
+}
+
+@media screen and (max-width:767px)
+{
+  .header{
+    display: block;
+    height:auto;
+  } 
+  .header ol {
+    display: block;
+  }
+  .header ol li {
+    height: 50px;
+  }
+
+  .header a{
+    display: flex;
+    justify-content: center;
+  }
+  .project{
+    display: block;
+  }
+  .project-details, .project-imageContainer{
+    width: auto;
+  }
+
+  .project-details{
+    font-size: 16px;
+  }
+  .project-title{
+    font-size: 1.5em;
+    margin-bottom: .3em;
+
+  }
+  .project-course, .project-date, .project-url{
+    font-size: .8em;
+    margin: 0.4 em;
+  }
+    .project-description{
+    font-size: .8em;
+  }
+
+}
+
+@media screen and (max-width:480px)
+{
+  .header{
+    display: block;
+    height:auto;
+  } 
+  .header ol {
+    display: block;
+  }
+  .header ol li {
+    height: 50px;
+  }
+
+  .header a{
+    display: flex;
+    justify-content: center;
+  }
+  .project{
+    display: block;
+  }
+  .project-details, .project-imageContainer{
+    width: auto;
+  }
+
+  .project-details{
+    font-size: 14px;
+  }
+
+  .project-title{
+    font-size: 1.5em;
+    margin-bottom: .3em;
+
+  }
+  
+  .project-course, .project-date, .project-url{
+    font-size: .8em;
+    margin: 0.4 em;
+  }
+  .project-description{
+    font-size: .8em;
+  }
+}
+  
+@media screen and (max-width:320px)
+{
+  .header{
+    display: block;
+    height:auto;
+  } 
+  .header ol {
+    display: block;
+  }
+  .header ol li {
+    height: 50px;
+  }
+
+  .header a{
+    display: flex;
+    justify-content: center;
+  }
+  .project{
+    display: block;
+  }
+  .project-details, .project-imageContainer{
+    width: auto;
+  }
+  .project-details{
+    font-size: 12px;
+  }
+
+  .project-title{
+    font-size: 1.5em;
+    margin-bottom: .3em;
+
+  }
+  .project-course, .project-date, .project-url{
+    font-size: .8em;
+    margin: 0.3em;
+  }
+  .project-description{
+    font-size: .8em;
+  }
+} 
+
