--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,37 @@ valores */
 /* background gris = #1b2127 */
 /* celeste = #026fff */
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?hmlq8j');
+  src:  url('../fonts/icomoon.eot?hmlq8j#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?hmlq8j') format('truetype'),
+    url('../fonts/icomoon.woff?hmlq8j') format('woff'),
+    url('../fonts/icomoon.svg?hmlq8j#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-menu:before {
+  content: "\e900";
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
@@ -347,9 +378,59 @@ figure {
 .container img{
 margin: auto;
 }
+
+.burger-button{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color:rgba(0, 0, 0, .8);
+  display: none;
+  line-height: 40px;
+  text-align: center;
+  position: fixed;
+  z-index: 4;
+  left: 5px;
+  top:5px;
+  color: white;
+
+
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+}
 /* //Desktop Fisrt */
+@media screen and (max-width:1280px){
+  .html-video{
+    width: 100%;
+    height: auto;
+    /* max-width: 100%; */
+    /* margin-left: 1em; */
+  }  
+   .youtube-video{
+    /* width: 100%;
+    height: auto; */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  } 
+
+  .flexible-video{
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+    background-color: #026fff;
+  }
+}
 @media screen and (max-width:1024px)
 {
+    .hero-image{
+      height: auto;
+    }
   .menu{
     width: 40%;
   }
@@ -360,7 +441,7 @@ margin: auto;
   .container img{
     margin: 0;
     align-items: center;
-    height: 365%;
+    height: 50px;
   }
 
   .hero{
@@ -397,10 +478,26 @@ margin: auto;
     display: block;
 
   }
-}
 
+  .container img{
+    margin: 0;
+    align-items: center;
+    height: 365%;
+  }
+.project-imageContainer img{
+  height: auto;
+}
+ 
+
+}
 @media screen and (max-width:767px)
 {
+  .hero-image{
+    height: auto;
+  }
+  .burger-button{
+    display: block;
+  }
   .header{
     display: block;
     height:auto;
@@ -415,9 +512,28 @@ margin: auto;
   .header a{
     display: flex;
     justify-content: center;
+    height: 40px;
+    font-size: 2em;
+    text-decoration: underline;
+    margin-bottom: .5em;
+
   }
-  .menu{
-    width: 100%;
+  .menu{  
+    position: fixed;
+    background: rgba(5, 111, 255,.9);
+    z-index: 3;
+    top: 0;
+    left: -100vw;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 0;
+    transition: .3s;
+  }
+
+  .menu.is-active{
+    left: 0; 
   }
   .project{
     display: block;
@@ -467,9 +583,23 @@ margin: auto;
     border: 2px solid transparent;
   }
 
+  .container img{
+    margin: 0;
+    align-items: center;
+    height: 365%;
+  }
+
+  .figure img{
+    height: 50px;
+  }
+
+ 
+
   .portfolio{
     margin-top: 24em;
   }
+
+  
 }
 @media screen and (max-width:515px)
 {
